test/IRGen/bitcast_different_size.sil
// RUN: %swift -target x86_64-apple-macosx10.9 -emit-ir %s -verify

sil_stage canonical

import Swift

sil @bitcast_different_size : $@thin (Int32) -> Int64 {
entry(%i : $Int32):
  %o = unchecked_trivial_bit_cast %i : $Int32 to $Int64 // expected-error{{bitcast between types of different size}}
  %p = unchecked_ref_bit_cast %i : $Int32 to $Int64 // expected-error{{bitcast between types of different size}}
  return %o : $Int64
}
